--- a/netlify.toml
+++ b/netlify.toml
@@ -6,6 +6,12 @@
   force = true
 
 [[redirects]]
+  from = "https://www.qrcodegeneratorpro.netlify.app/*"
+  to = "https://qrcodegeneratorpro.netlify.app/:splat"
+  status = 301
+  force = true
+
+[[redirects]]
   from = "http://qrcodegeneratorpro.netlify.app/*"
   to = "https://qrcodegeneratorpro.netlify.app/:splat"
   status = 301
